--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
           rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
           crossorigin="anonymous">
-    <title>Страница пользовтаеля</title>
+    <title>User page</title>
 </head>
 <body>
 <nav th:object="${user}" class="navbar navbar-dark bg-dark" style="background-color: #343A40">
@@ -43,50 +43,46 @@
                 </div>
             </ul>
         </div>
-        <!--            <div class="row justify-content">-->
-        <!--                <div class="btn-group-vertical justify-content">-->
-        <!--                    <a class="btn btn-primary btn-md" href="/user" role="button">User</a>-->
-        <!--                </div>-->
-        <!--            </div>-->
-        <!--        </div>-->
 
+        <div class="col-sm-10 height: 1200 px" style="background-color: #F8F9FA; height: 500px">
+            <div class="tab-content">
+                <div class="tab-pane fade show active" id="user" role="tabpanel">
+                    <div class="row">
+                        <div class="col-sm-12 p3">
+                            <h2>User information-page</h2>
+                            <div class="card">
+                                <div class="card-header">
+                                    <h4 class="card-title br-light">About user</h4>
+                                </div>
+                                <div class="tab-content">
 
-        <div class="col-sm-10">
-            <div class="tab-content" style="background-color: #F8F9FA">
-                <div class="row">
-                    <div class="col-sm-12 p3">
-                        <h2>User information-page</h2>
-                        <div class="card">
-                            <div class="card-header">
+                                    <div class="tab-body">
+                                        <!--                                    <div class="tab-content table-responsive fade show active" id="user" role="tabpanel">-->
+                                        <table class="table table-striped table-sm">
+                                            <thead>
+                                            <tr>
+                                                <th>ID</th>
+                                                <th>First Name</th>
+                                                <th>Last Name</th>
+                                                <th>Age</th>
+                                                <th>Email</th>
+                                                <th>Role</th>
+                                            </tr>
+                                            </thead>
+                                            <tbody>
 
-                                <h4 class="card-title br-light">About user</h4>
-                            </div>
-                            <div class="card-body">
-                                <div class="tab-content table-responsive">
-                                    <table class="table table-stripped table-sm">
-                                        <thead>
-                                        <tr>
-                                            <th>ID</th>
-                                            <th>First Name</th>
-                                            <th>Last Name</th>
-                                            <th>Age</th>
-                                            <th>Email</th>
-                                            <th>Role</th>
-                                        </tr>
-                                        </thead>
-                                        <tbody>
+                                            <tr th:object="${user}">
+                                                <td th:text="${user.getId()}"></td>
+                                                <td th:text="${user.getName()}"></td>
+                                                <td th:text="${user.getLastname()}"></td>
+                                                <td th:text="${user.getAge()}"></td>
+                                                <td th:text="${user.getEmail()}"></td>
+                                                <td th:text="${roles}"></td>
+                                            </tr>
+                                            </tbody>
 
-<!--                                        <tr th:object="${user}">-->
-                                            <td th:text="${user.getId()}"></td>
-                                            <td th:text="${user.getName()}"></td>
-                                            <td th:text="${user.getLastname()}"></td>
-                                            <td th:text="${user.getAge()}"></td>
-                                            <td th:text="${user.getEmail()}"></td>
-                                            <td th:text="${roles}"></td>
-                                        </tr>
-                                        </tbody>
-
-                                </table>
+                                        </table>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -96,17 +92,12 @@
         </div>
     </div>
 </div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+        crossorigin="anonymous">
 
-
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
-                    integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
-                    crossorigin="anonymous">
-
-            </script>
-
-<!--        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>-->
-<!--        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>-->
-<!--        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>-->
+</script>
 
 
 </body>
