--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -44,44 +44,44 @@
             </ul>
         </div>
 
-        <div class="col-sm-10 height: 1200 px" style="background-color: #F8F9FA; height: 500px">
+        <div class="col-sm-10 height: 1200 px" style="background-color: #F8F9FA; height: 1000px">
             <div class="tab-content">
                 <div class="tab-pane fade show active" id="user" role="tabpanel">
                     <div class="row">
                         <div class="col-sm-12 p3">
                             <h2>User information-page</h2>
-                            <div class="card">
+                          <div class="card">      <!--  класс внутри класса / таблица внутри таблицы-->
                                 <div class="card-header">
                                     <h4 class="card-title br-light">About user</h4>
                                 </div>
-                                <div class="tab-content">
+                                <div class="card-body">
+                                    <div class="tab-content table-responsive">
+                                        <div class="tab-body">
+                                            <table class="table table-striped table-sm">
+                                                <thead>
+                                                <tr>
+                                                    <th>ID</th>
+                                                    <th>First Name</th>
+                                                    <th>Last Name</th>
+                                                    <th>Age</th>
+                                                    <th>Email</th>
+                                                    <th>Role</th>
+                                                </tr>
+                                                </thead>
+                                                <tbody>
 
-                                    <div class="tab-body">
-                                        <!--                                    <div class="tab-content table-responsive fade show active" id="user" role="tabpanel">-->
-                                        <table class="table table-striped table-sm">
-                                            <thead>
-                                            <tr>
-                                                <th>ID</th>
-                                                <th>First Name</th>
-                                                <th>Last Name</th>
-                                                <th>Age</th>
-                                                <th>Email</th>
-                                                <th>Role</th>
-                                            </tr>
-                                            </thead>
-                                            <tbody>
+                                                <tr th:object="${user}">
+                                                    <td th:text="${user.getId()}"></td>
+                                                    <td th:text="${user.getName()}"></td>
+                                                    <td th:text="${user.getLastname()}"></td>
+                                                    <td th:text="${user.getAge()}"></td>
+                                                    <td th:text="${user.getEmail()}"></td>
+                                                    <td th:text="${roles}"></td>
+                                                </tr>
+                                                </tbody>
 
-                                            <tr th:object="${user}">
-                                                <td th:text="${user.getId()}"></td>
-                                                <td th:text="${user.getName()}"></td>
-                                                <td th:text="${user.getLastname()}"></td>
-                                                <td th:text="${user.getAge()}"></td>
-                                                <td th:text="${user.getEmail()}"></td>
-                                                <td th:text="${roles}"></td>
-                                            </tr>
-                                            </tbody>
-
-                                        </table>
+                                            </table>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
